public class Main {
    //relacionar las clases Barco, Auto, Vehiculo y registro
    public static void main(String[] args) {

    }
}