@startuml


package edu.ubp.doo.main{
    class Main{}
}

package edu.ubp.doo.modelo{
    class Vehiculo{
        nroSerie:int
        color:String
        +Vehiculo(nroSerie:int,color:String)
        }
    class Barco{
        largoProa:float
        LaragoProa:float
        +Barco(largoProa:float,LaragoProa:float)
        +toString():String
        }
    class Auto{
        cilindrada:int
        +Auto(cilindrada:int, nroSerie:int, color:String)
        }
    class Registro{
        listado:Vehiculo
        +cargarListado(lista):void
        +mostrarListado():void
        }
}
package edu.ubp.doo.uml{
    class Diagrama-de-clases{}
}
Barco -up-|> Vehiculo
Auto -up-|> Vehiculo

Registro "0..*" o-down- "0..*" Vehiculo
main "1".. "1" Registro

note as n1
esto es un comentario uml
end note

Registro - n1
@enduml